# seqpad

./: LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/seqpad/core/: __init__.py
src/seqpad/tests/: __init__.py  test_triplets.py
