[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2,<9",
    "preparse>=0.1.6,<2",
]
description = "This project pads nucleotide sequences."
keywords = []
name = "seqpad"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.13"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/seqpad/#files"
Index = "https://pypi.org/project/seqpad/"
Source = "https://github.com/johannes-programming/seqpad/"
Website = "https://seqpad.johannes-programming.online/"
